# skills

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  towncrier.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  release.yml
clis/copilot-money-cli/: pyproject.toml
clis/copilot-money-cli/newsfragments/: 1.feature
clis/copilot-money-cli/src/gfd_copilot_money_cli/: __init__.py  cli.py  context.py  repl.py
clis/copilot-money-cli/src/gfd_copilot_money_cli/commands/: accounts.py  budgets.py  categories.py  recurring.py  status.py  summary.py  transactions.py
clis/copilot-money-cli/src/gfd_copilot_money_cli/core/: db.py  keys.py  models.py  proto.py  store.py
clis/copilot-money-cli/src/gfd_copilot_money_cli/utils/: repl_skin.py
clis/copilot-money-cli/tests/: TEST.md  test_cli.py  test_keys.py  test_proto.py
clis/imdb-cli/: pyproject.toml
clis/imdb-cli/src/gfd_imdb_cli/: __init__.py  cli.py  client.py  context.py  movie.py  output.py  person.py  search.py  top.py  upcoming.py
clis/imdb-cli/tests/: test_cli.py
clis/monarch-cli/: pyproject.toml
clis/monarch-cli/src/gfd_monarch_cli/: accounts.py  auth.py  budgets.py  cashflow.py  categories.py  cli.py  output.py  recurring.py  transactions.py
clis/monarch-cli/tests/: test_cli.py
plugins/avatar-boris-cherny/: AVATAR.md  CLAUDE.md
plugins/avatar-eric-evans/: CLAUDE.md
plugins/avatar-gene-kim/: CLAUDE.md
plugins/avatar-kent-beck/: AVATAR.md  CLAUDE.md  (+1 more)
scripts/: bump-version.sh  new-cli.sh  release-cli.sh
(+283 files in other folders)
