[project]
name = "gfd-copilot-money-cli"
version = "0.1.0"
requires-python = ">=3.12"
description = "Copilot Money personal finance CLI — reads local cache, no API needed"
dependencies = [
    "click>=8.0",
    "plyvel-ci>=1.5",
    "tabulate>=0.9",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
gfd-copilot-money = "gfd_copilot_money_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfd_copilot_money_cli"]
