[project]
name = "gfd-imdb-cli"
version = "0.2.0"
requires-python = ">=3.12"
description = "IMDB data CLI using IMDB APIs"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "tabulate>=0.9",
]

[project.scripts]
gfd-imdb = "gfd_imdb_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfd_imdb_cli"]
